# File and Version Information:
#  $Id: ChangeLog 8463 2014-06-24 01:53:04Z cpo@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package xtcav
#------------------------------------------------------------------------

Package author: Alvaro Sanchez-Gonzalez

Please describe any modifications that you made to the package in the
reverse time order.

From Alvaro Sanchez-Gonzalez	

-Greatly improved performance by optimizing some of the calculations performed for the autothreshold and the scipylabel algorithms. This was originally causing some jobs to swap memory too often making them really slow.

Tag: V00-00-14
2016-02-03 Christopher O'Grady
Fix crash when image was almost empty, so "physical units" PU['xfs']
in Utils.py only had len(1).  Now mark those images as failed.

From Alvaro Sanchez-Gonzalez	
-Small bug corrected that was leading to bad behavior when the user tried to load a lasing off reference with the old variable names.
-Added Test.py for running standard tests using python Tests.py on the main three classes. These tests are not exhaustive (they are not sophisticated unit tests of anything like that), as they do not test all possible combinations of paramentes, but at least they allow for a quick check. They require access to experiment 'amo86815'.
-Add method InterBunchPulseDelayBasedOnCurrentMultiple.
-Added docstring to IslandSplittingContour.
-Attribute islandSplitMethod renamed to islandsplitmethod to keep consistency.
-Changed names of the parameters for the island split method: par1 and par2 to islandsplitpar1, islandsplitpar2, so at least the name states that they refer to the island splitting process (even if they are used differently by different algorithms at some point).
-Added an option to methods which depends on the reconstruction algorithm (RMS or COM) to select which algorithm to use, instead of having different methods.

Tag: V00-00-13
2015-08-18 Christopher O'Grady
Fix bug in setting "ok" value in GetGlobalXTCAVCalibration.
